--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,12 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "framer-motion": "^6.2.8",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "http-proxy-middleware": "^2.0.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.3",
     "react-hook-form": "^7.29.0",
-    "react-query": "^3.34.16",
+    "react-query": "^3.34.19",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "recoil": "^0.6.1",
